change topic parameter to event - and send RunManager since while loading state sometimes can be freeze